update menu frontend

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=54ee36b65ed632657fcd",
-    "/css/app.css": "/css/app.css?id=d3a41b5e79f767c29e9c"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
