update home page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=fecec61ffc73c4168e95",
-    "/css/app.css": "/css/app.css?id=6bdcbe88bc3b1783be9a"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
